# lcsr_perception

interactive_pcl/: CMakeLists.txt  README.md  package.xml  pass_though.launch  plane_removal.launch
manual_interactive_groundtruth/: CMakeLists.txt  README.md  groundtruth.rviz  mesh_marker_pub.py  object.launch  package.xml  pcd.launch
rgbd_data_collection/: CMakeLists.txt  README.md  package.xml  pcd.bash  record_pcd.bash  transform_pcd.cpp
rgbd_sim/: CMakeLists.txt  README.md  drill.launch  gazebo.launch  kinect.launch  kinect.urdf.xacro  kinect.world  objrec_parameters.launch  objrec_ransac.launch  package.xml  view.rviz
stacked_stereo_transport/: CMakeLists.txt  package.xml
stacked_stereo_transport/include/stacked_stereo_transport/: stereo_stacker.h  stereo_unstacker.cpp  stereo_unstacker.h
stacked_stereo_transport/src/: stereo_stacker.cpp  stereo_stacker_node.cpp  stereo_unstacker.cpp  stereo_unstacker_node.cpp
